fix form style on mobile version

--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -50,6 +50,7 @@ h1 {
   border: solid 1px #e8e8e8;
   border-radius: 45rem;
   padding: 0.875rem;
+  cursor: pointer;
 }
 
 @media screen and (min-width: 768px) {
